BSSWD-3-N4L Business Support Systems Web Development 1. This is the fix the iframe in contact-us page not to overflow in mobile view.

--- a/css/n4lportal-force-com.css
+++ b/css/n4lportal-force-com.css
@@ -203,3 +203,22 @@ article h2 {
 		background-position: center -80px;
 	}
 }
+
+/*iframe classes*/
+.contact-us-iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.contact-us-iframe-parent {
+	position: relative;
+	padding-bottom:56.25%;
+	height: 0;
+	overflow: hidden;
+}
+.contact-us-iframe-block {
+	max-width: 500px;
+	margin: auto;
+}
